--- a/DomoWeb/app/views/dashboard.html
+++ b/DomoWeb/app/views/dashboard.html
@@ -3,7 +3,7 @@
         <rd-widget>
             <rd-widget-body>
                 <div class="widget-icon green pull-left">
-                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-moon-o"></i>
                 </div>
                 <div class="title">{{dashboard.lowHourIndex | number:0}}</div>
                 <div class="comment">Index heure creuse</div>
